# TINS-is-not-speedhack-2012

./: .gitignore  README.md
Allefant_Quest of the Prime Dragons/Quest of the Prime Dragons/: Makefile
Allefant_Quest of the Prime Dragons/Quest of the Prime Dragons/c/: actor.c  actor.h  actortype.c  actortype.h  ai.c  ai.h  color.c  color.h  common.h  embed.c  embed.h  graphics.c  graphics.h  item.c  item.h  itemtype.c  itemtype.h  main.c  main.h  music.c  music.h  object.c  object.h  parallax.c  parallax.h  raytrace.c  raytrace.h  sound.c  sound.h  special.c  special.h  wave.c  wave.h
Ben 'Bruce "entheh" Perry' Davis_Period Dragon/PeriodDragon/: PeriodDragon.visualdproj  circuits.d  design.txt  gamefiles.d  gumph.d  level001.lvl  level004.lvl  level005.lvl  level006.lvl  level007.lvl  level009.lvl  levelfiles.d  readme.txt  torches.d
Ben Davis_Period Dragon/PeriodDragon/: PeriodDragon.sln  drawing.d  editing.d  gaming.d  level002.lvl  level003.lvl  level008.lvl  leveltypes.d  main.d  menus.d  overlaptest.d  tilesizes.d  util.d
Gassa_Drakes/: compile.sh  makefile  run.bat  run.sh
Gassa_Drakes/docs/: readme.txt
Gassa_Drakes/docs/legal/: SIL Open Font License 1.1.txt  license.txt
Gassa_Drakes/src/: board.cpp  board.h  global.h  main.cpp  piece.cpp  piece.h  random.cpp  random.h
Mankarse_Chocozumas Revenge/: makefile
Mankarse_Chocozumas Revenge/src/: Enemy.h
MiquelFire_Space Dragon Escape/sde/: Makefile  designDoc.txt  readme.txt  sde.vcxproj  sde.vcxproj.filters
MiquelFire_Space Dragon Escape/sde/data/: background.it  levels.csv
MiquelFire_Space Dragon Escape/sde/include/: csv.h  dragon.h  (+7 more)
SiegeLord_Drakenkaput/Drakenkaput_TINS/: LICENSE  game.cfg
Slartibartfast_Space Fortress/: CannonTurret.cpp  CannonTurret.h  Collidable.cpp  Collidable.h  Common.h  Constants.h  DefenceTurret.cpp  DefenceTurret.h  Dragonship.cpp  Dragonship.h  Game.cpp  Game.h  PlayerShip.cpp  PlayerShip.h  README.txt  SpaceShip.cpp  SpaceShip.h  SpearTurret.cpp  SpearTurret.h  Turret.cpp  Turret.h  Weapons.cpp  Weapons.h  main.cpp
SwitchPulse_Wael the Wheel Whale/: IniFile.cpp  IniFile.hpp  README.txt  animHandler.cpp  animHandler.hpp  animation.cpp  animation.hpp  attackHandler.cpp  attackHandler.hpp  block.cpp  block.hpp  bullet.cpp  bullet.hpp  enemy.cpp  enemy.hpp  enemy.ini  entity.hpp  getValue.cpp  getValue.hpp  hud.cpp  hud.hpp  inst.ini  main.cpp  map.cpp  map.hpp  map.ini  musicPlayer.cpp  musicPlayer.hpp  player.cpp  player.hpp  polygon.cpp  polygon.hpp  polygonCollision.hpp  setControls.cpp  setControls.hpp  splitter.cpp  vector.cpp  vector.hpp
SwitchPulse_Wael the Wheel Whale/music(happy)/: KeyA.txt  KeyAShortcut.txt  KeyB.txt  KeyBShortcut.txt  KeyC.txt  KeyD.txt  KeyE.txt  inst.ini
SwitchPulse_Wael the Wheel Whale/sheets/: bodyjump.tga  bodyjump1.tga  bodywalk.tga  bullet.tga  dragon.tga  heads.tga  helicopter.tga  map1 background.tga  map1 foreground.tga  map1 midground.tga  map1.tga  map1a foreground.tga  tank.tga  test.tga  test0000.tga  volcanoe.tga
Timorg_Dragon Joust/timorg_tins12/: egg.spr  enemy.spr  enemyf.spr  joust.cpp  platform.spr  player.spr  playerf.spr  readme.txt  spawner.spr  spr_edit.cpp
amarillion_Laundry Day at Bananas Manor/tins12/: README.txt  makefile
darkbits_Primal Scream/db-tins12-primal-scream-src/: README.txt
inde_DrachenVeer/: CMakeLists.txt  Launch  Launch.cmd  Makefile  README.TXT
inde_DrachenVeer/CMake/Modules/: FindChipmunk.cmake  FindFreetype.cmake  FindLua.cmake
inde_DrachenVeer/Data/: icon.icns  levels.txt
inde_DrachenVeer/Data/Levels/Dragon01/: Bush0.obt  Bush1.obt  Bush2.obt  Cloud0.obt  Cloud1.obt  Cloud2.obt  Lamp0.obt  Rock0.obt  attr.txt  cloud0.txt  cloud1.txt  cloud2.txt  enemy.obt  enemy.shp  entities.lua  foliage.txt  front.txt  ground.obt  ground.shp  hero.obt  hero.shp  level.txt  playlayer.txt  sprites.txt  unused_rock.txt
inde_DrachenVeer/Data/Shaders/anaglyphic/: pixel_glsl.shader
inde_DrachenVeer/Data/Shaders/bw/: pixel_glsl.shader
inde_DrachenVeer/Data/Shaders/fov/: pixel_glsl.shader
inde_DrachenVeer/Data/Shaders/silhoutte/: pixel_glsl.shader
inde_DrachenVeer/Data/Shaders/skeleton/: pixel_glsl.shader
inde_DrachenVeer/Data/Shaders/tonemap/: pixel_glsl.shader
inde_DrachenVeer/Data/Shaders/triochrome/: pixel_glsl.shader
inde_DrachenVeer/Data/Sprites/Bush0/: sprite.txt
inde_DrachenVeer/Data/Sprites/Bush1/: sprite.txt
inde_DrachenVeer/Data/Sprites/Bush2/: sprite.txt
inde_DrachenVeer/Data/Sprites/Caveman/: sprite.txt
inde_DrachenVeer/Data/Sprites/Cloud0/: sprite.txt
inde_DrachenVeer/Data/Sprites/Cloud1/: sprite.txt
inde_DrachenVeer/Data/Sprites/Cloud2/: sprite.txt
inde_DrachenVeer/Data/Sprites/DragonWinged/: sprite.txt
inde_DrachenVeer/Data/Sprites/Invisible/: sprite.txt
inde_DrachenVeer/Data/Sprites/Lamp0/: sprite.txt
inde_DrachenVeer/Data/Sprites/Rock0/: sprite.txt
inde_DrachenVeer/Data/Sprites/Snake/: sprite.txt
inde_DrachenVeer/Data/Sprites/WidgetZSkinBDown/: sprite.txt
inde_DrachenVeer/Data/Sprites/WidgetZSkinBUp/: sprite.txt
inde_DrachenVeer/Data/Sprites/WidgetZSkinBox/: sprite.txt
inde_DrachenVeer/Data/Sprites/WidgetZSkinEdit/: sprite.txt
inde_DrachenVeer/Data/Sprites/WidgetZSkinScroll/: sprite.txt
inde_DrachenVeer/Data/Sprites/WidgetZSkinSlider/: sprite.txt
inde_DrachenVeer/Include/: actions.h  appinfo.h  camera.h  defs.h  draw.h  emu3d.h  fonts.h  gameglobal.h  global.h  gui.h  handlers.h  hash.h  header.h  level.h  list.h  log.h  object.h  physics.h  pool.h  script.h  shader.h  sprite.h  state.h  statedef.h  transfx.h  unroll.h  unrollundo.h  util.h
inde_DrachenVeer/Src/: .hgsub  CMakeLists.txt  actions.c  camera.c  draw.c  driver.c  emu3d.c  fonts.c  gameglobal.c  gameplay.c  global.c  gui.c  hash.c  levanim.c  levload.c  levrender.c  list.c  log.c  main.rc  object.c  objload.c  objrender.c  physicschipmunk.c  pool.c  script.c  shader.c  splash.c  spranim.c  sprload.c  sprrender.c  state.c  transfx.c  usual.c  util.c
inde_DrachenVeer/Src/Private/: oapi.h  olist.h  physicschipmunk.h
kdevil_Old West Railroad Dragon Bartender!/src/: main.cpp~
(+142 files in other folders)
